Fixed duplicate dark mode button

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -493,7 +493,7 @@ body{
     justify-content: center;
 }
 .mobile-btn{
-    display: none;
+    display: none !important;
     margin: 25px;
 }
 .desktop-btn{
@@ -758,7 +758,7 @@ footer .copyright{
     transform: translateY(0%) !important;
     transition: all 0.3s;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   
     nav{
         background-color: var(--primary);
